--- a/L57 - JS DOM querySelectorAll with classlist to add or remove property/Ex57.md
+++ b/L57 - JS DOM querySelectorAll with classlist to add or remove property/Ex57.md
@@ -1,9 +1,9 @@
 ClassList Practice
-In index.html, you'll find 6 <li> elements, two of which have the 'highlight' class applied to them. 
+In index.html, you'll find 6 'li' elements, two of which have the 'highlight' class applied to them. 
 
 Please use JavaScript and the classList property to invert which elements have the highlight class. 
 
-Basically, iterate over all the '<li>' elements and toggle the class of 'highlight' on each one. Your end result should look like this:
+Basically, iterate over all the 'li' elements and toggle the class of 'highlight' on each one. Your end result should look like this:
 
 ![image](https://github.com/RFHertel/Web-Dev-Bootcamp/assets/74387792/195c8e40-9711-457d-9aa7-98c37f7d6497)
 
